--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <div class="card text-center">
-        <img class="img-circle bordercir" width="200" height="200" src="images/profile.jpg" alt="Mathieu Wendi" size="500px">
+        <img class="img-circle bordercir" width="200" height="200" src="images/pro.jpg" alt="Mathieu Wendi" size="500px">
         <h1> Mathieu Wendi </h1>
         <h2> Basketteur - SneakerHead - Amateur de pancakes </h2>
         <p> You say <strong>I dream too big</strong>, I say you <strong>think too small</strong>.
